docs: add show opening docs
