# handlers/response.go
@@ -8,36 +8,39 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func sendError (ctx *gin.Context, code int, msg string ){
+func sendError(ctx *gin.Context, code int, msg string) {
 	ctx.Header("Content-Type", "application/json")
 	ctx.JSON(code, gin.H{
-		"message":msg,
+		"message":   msg,
 		"errorCode": code,
 	})
 }
 
-
-func sendSuccess(ctx *gin.Context, op string, data interface{}){
+func sendSuccess(ctx *gin.Context, op string, data interface{}) {
 	ctx.Header("Content-Type", "application/json")
 	ctx.JSON(http.StatusOK, gin.H{
 		"message": fmt.Sprintf("operation %s successfull", op),
-		"data": data,
-	} )
-	
+		"data":    data,
+	})
+
 }
 
-
 type ErrorResponse struct {
-	Message string `json:"message"`
+	Message   string `json:"message"`
 	ErrorCode string `json:"errorCode"`
 }
 
 type CreateOpeningResponse struct {
-	Message string `json:"message"`
-	Data schemas.OpeningResponse `json:"data"`
-}
-type DeleteOpeningResponse struct {
-	Message string `json:"message"`
-	Data schemas.OpeningResponse `json:"data"`
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
 }
 
+type DeleteOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
+
+type ShowOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
